--- a/app/javascript/src/styles/specific/posts.scss
+++ b/app/javascript/src/styles/specific/posts.scss
@@ -571,6 +571,10 @@ section#image-extra-controls {
   white-space: normal;
 }
 
+section#tag-list {
+  word-break: break-word;
+}
+
 #tag-list > ul {
   margin-bottom: $quarter-padding;
 }
